# Flutter-Neo-Shield

./: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: ci.yml
example/: .flutter-plugins-dependencies  pubspec.yaml
example/integration_test/: native_rasp_test.dart
example/lib/screens/: screen_shield_demo.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
ios/: flutter_neo_shield.podspec
ios/Classes/: FlutterNeoShieldPlugin.swift
ios/Classes/rasp/: DeveloperModeDetector.swift
lib/: flutter_neo_shield_stub.dart  flutter_neo_shield_web.dart
lib/src/: flutter_neo_shield.dart
lib/src/clipboard_shield/: clipboard_shield.dart  clipboard_shield_config.dart  secure_copy_button.dart  secure_paste_field.dart
lib/src/core/: pii_detector.dart  pii_type.dart  shield_report.dart
lib/src/log_shield/: dio_shield_interceptor.dart  log_shield.dart  log_shield_config.dart
lib/src/memory_shield/: memory_shield.dart  memory_shield_config.dart  secure_bytes.dart  secure_string.dart  secure_value.dart
lib/src/platform/: rasp_channel.dart  screen_channel.dart
linux/: CMakeLists.txt  flutter_neo_shield_plugin.cc
linux/include/flutter_neo_shield/: flutter_neo_shield_plugin.h
linux/rasp/: debugger_detector.cc  debugger_detector.h  developer_mode_detector.cc  developer_mode_detector.h  frida_detector.cc  frida_detector.h  hook_detector.cc  hook_detector.h  integrity_detector.cc  integrity_detector.h  native_debug_detector.cc  native_debug_detector.h  network_threat_detector.cc  network_threat_detector.h  privilege_detector.cc  privilege_detector.h  signature_detector.cc  signature_detector.h  vm_detector.cc  vm_detector.h
linux/screen/: screen_protector.cc  screen_protector.h  screen_recording_detector.cc  screen_recording_detector.h
macos/: flutter_neo_shield.podspec
macos/Classes/: FlutterNeoShieldPlugin.swift
test/clipboard_shield/: secure_paste_field_test.dart
test/core/: pii_detector_test.dart
test/log_shield/: log_shield_test.dart
test/rasp/: rasp_channel_test.dart  rasp_shield_test.dart
test/string_shield/: string_shield_test.dart
windows/: CMakeLists.txt  flutter_neo_shield_plugin.cpp
windows/include/flutter_neo_shield/: flutter_neo_shield_plugin_c_api.h
windows/location/: location_shield_handler.cpp
windows/rasp/: debugger_detector.cpp  debugger_detector.h  developer_mode_detector.cpp  developer_mode_detector.h  frida_detector.cpp  frida_detector.h  hook_detector.cpp  hook_detector.h  integrity_detector.cpp  integrity_detector.h  native_debug_detector.cpp  native_debug_detector.h  network_threat_detector.cpp  network_threat_detector.h  privilege_detector.cpp  privilege_detector.h  signature_detector.cpp  signature_detector.h  vm_detector.cpp  vm_detector.h
windows/screen/: screen_protector.cpp  screen_protector.h  screen_recording_detector.cpp  screen_recording_detector.h
(+26 files in other folders)
